[project]
name = "missiles"
version = "0.1.0"
description = "One way effector missile demo"
authors = [
    {name = "Rich Wood",email = "rftwood@googlemail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mesa (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
