[project]
name = "missiles"
version = "0.1.0"
description = "One way effector missile demo"
authors = [
    {name = "Rich Wood",email = "rftwood@googlemail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mesa>=3.2.0,<4.0.0",
    "matplotlib>=3.10.3,<4.0.0",
    "solara>=1.50.0,<2.0.0",
    "scipy>=1.16.0,<2.0.0",
    "networkx>=3.6.1",
]


[tool.uv]
package = false
